data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_789.wast
;; 10. **Test Description**: Implement a `br_table` instruction targeting both direct and nested `br` labels. Use multiple `nop` instructions around and within target labels and blocks.     - **Constraint Checked**: Verify no impact on complex target resolution with extensive `nop` use.     - **Edge Case Relation**: The combined branching structure should exhibit predictable behavior, unaffected by `nop`, ensuring stack handling remains consistent.

(assert_invalid
  (module 
    (func $test-nop-br_table 
      (block $label0 
        (nop) 
        (block $label1 
          (br_table $label1 $label0 
            (i32.const 0) 
            (nop)
            )
          )
        )
      )
    )
  "type mismatch"
)